--- a/package.json
+++ b/package.json
@@ -15,15 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    
     "cors": "^2.8.5",
-    "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.5.4",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.19",
-    "validator": "^13.7.0"
+    "nodemon": "^2.0.19"
   }
 }
