--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
