--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gridfs-stream": "^1.1.1",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.19"
   }
 }
