--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGO_URI=mongodb+srv://jpastva:kidzsnap123@cluster0.jbomiej.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://asmongousr:TlQT4Zvx44ZD6AhY@cluster0.jbomiej.mongodb.net/?retryWrites=true&w=majority
