--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "gridfs-stream": "^1.1.1",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.19",
+    "react-file-base64": "^1.0.3",
     "react-webcam": "^7.0.1",
     "validator": "^13.7.0"
   }
