--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^2.0.19",
     "react-file-base64": "^1.0.3",
     "react-webcam": "^7.0.1",
+    "socket.io": "^4.5.3",
     "validator": "^13.7.0"
   }
 }
