--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "gridfs-stream": "^1.1.1",
+    "js-cookies": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
@@ -34,6 +35,7 @@
     "react-file-base64": "^1.0.3",
     "react-webcam": "^7.0.1",
     "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "validator": "^13.7.0"
   }
 }
