--- a/client/package.json
+++ b/client/package.json
@@ -12,20 +12,30 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "buffer": "^6.0.3",
     "@types/material-ui": "^0.21.12",
+    "axios": "^1.1.3",
+    "buffer": "^6.0.3",
     "date-fns": "^2.29.3",
+    "emoji-picker-react": "^4.4.5",
+    "netlify-cli": "^12.2.0",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-input-emoji": "^4.3.0",
     "react-papaparse": "^4.1.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.5.3",
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.75.0"
   }
 }
