--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT=4000
 MONGO_URI=mongodb+srv://asmongousr:TlQT4Zvx44ZD6AhY@cluster0.jbomiej.mongodb.net/?retryWrites=true&w=majority
 
 SECRET=j@HPJfS25tIvPWpIZ7xbQ7$58g*TIaZ77
+REACT_APP_LOCALHOST_KEY=localStorage.getItem('chat-app-user')
+ORIGIN="http://localhost:3000"
