--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=4000
+APP_PORT=3500
 MONGO_URI=mongodb+srv://asmongousr:TlQT4Zvx44ZD6AhY@cluster0.jbomiej.mongodb.net/?retryWrites=true&w=majority
 
 SECRET=j@HPJfS25tIvPWpIZ7xbQ7$58g*TIaZ77
