--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "js-cookies": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.19",
     "react-file-base64": "^1.0.3",
