Testing changing localhost to snap-main heroku

--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ MONGO_URI=mongodb+srv://asmongousr:TlQT4Zvx44ZD6AhY@cluster0.jbomiej.mongodb.net
 
 SECRET=j@HPJfS25tIvPWpIZ7xbQ7$58g*TIaZ77
 REACT_APP_LOCALHOST_KEY=localStorage.getItem('chat-app-user')
-ORIGIN="http://localhost:3000"
+ORIGIN="http://snap-main.herokuapp.com"
