--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:4000",
+  "proxy": "http://snap-main.herokuapp.com",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -44,6 +44,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
