--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-app-rewired": "^2.2.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
