--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ server/.env
 ../node_modules
 /node_modules
 node_modules
+node_modules/.package-lock.json
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
